--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,4 +5,6 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.1"
-diesel = [version = "2.0.4",features= ["mysql"]]
+argon2 = "0.5.0"
+chrono = "0.4.24"
+diesel = {version = "2.0.4",features= ["mysql"]}
