--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,3 +8,6 @@ actix-web = "4.3.1"
 argon2 = "0.5.0"
 chrono = "0.4.24"
 diesel = {version = "2.0.4",features= ["mysql"]}
+dotenvy = "0.15.7"
+serde = "1.0.162"
+serde_derive = "1.0.162"
