--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 actix-web = {version = "4.3.1", features = ["openssl"]}
 argon2 = "0.5.0"
 chrono = "0.4.24"
-diesel = {version = "2.0.4",features= ["mysql"]}
+diesel = {version = "2.0.4",features= ["mysql","r2d2"]}
 dotenvy = "0.15.7"
 openssl = "0.10.52"
 serde = "1.0.162"
