--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,11 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-session = { version = "0.7.2", features = ["cookie-session"] }
 actix-web = {version = "4.3.1", features = ["openssl"]}
 argon2 = "0.5.0"
 chrono = "0.4.24"
+common_structs = { version = "0.1.0", path = "../common_structs" }
 diesel = {version = "2.0.4",features= ["mysql","r2d2"]}
 dotenvy = "0.15.7"
+env_logger = "0.10.0"
 openssl = "0.10.52"
+password-hash = "0.5.0"
 serde = "1.0.162"
 serde_derive = "1.0.162"
