--- a/common_structs/Cargo.toml
+++ b/common_structs/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-diesel = "2.0.4"
 serde = "1.0.162"
 serde_derive = "1.0.162"
+chrono = { version = "0.4.24", features = ["serde"] }
