--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -3,7 +3,8 @@ name = "frontend"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+chrono = { version = "0.4.24", features = ["serde"] }
 iced = "0.9.0"
+reqwest = { version = "0.11.17", features = ["blocking", "json", "cookie_store"] }
+common_structs = { version = "0.1.0", path = "../common_structs" }
