--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -15,3 +15,4 @@ reqwest_cookie_store = "0.5.0"
 directories = "5.0.1"
 cookie = "0.17.0"
 regex = "1.8.1"
+iced_aw = { version = "0.5.2", features = ["modal", "card"] }
