--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4.24", features = ["serde"] }
-iced = "0.9.0"
+iced = { version = "0.9.0", features = ["tokio"] }
 reqwest = { version = "0.11.17", features = ["blocking", "json", "cookies"] }
 common_structs = { version = "0.1.0", path = "../common_structs" }
 once_cell = "1.17.1"
