--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -13,5 +13,7 @@ diesel = {version = "2.0.4",features= ["chrono","mysql","r2d2"]}
 dotenvy = "0.15.7"
 env_logger = "0.10.0"
 password-hash = "0.5.0"
+rand = "0.8.5"
+rust-crypto = "0.2.36"
 serde = "1.0.162"
 serde_derive = "1.0.162"
