--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,7 +8,7 @@ actix-session = { version = "0.7.2", features = ["cookie-session"] }
 actix-web = {version = "4.3.1"}
 argon2 = "0.5.0"
 chrono = "0.4.24"
-common_structs = { version = "0.1.0", path = "../common_structs" }
+common_lib = { version = "0.1.0", path = "../common_lib" }
 diesel = {version = "2.0.4",features= ["chrono","mysql","r2d2"]}
 dotenvy = "0.15.7"
 env_logger = "0.10.0"
