--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 chrono = { version = "0.4.24", features = ["serde"] }
 iced = { version = "0.9.0", features = ["tokio"] }
 reqwest = { version = "0.11.17", features = ["blocking", "json", "cookies"] }
-common_structs = { version = "0.1.0", path = "../common_structs" }
+common_lib = { version = "0.1.0", path = "../common_lib" }
 once_cell = "1.17.1"
 serde_json = "1.0.96"
 lazy_static = "1.4.0"
