--- a/common_lib/Cargo.toml
+++ b/common_lib/Cargo.toml
@@ -10,4 +10,4 @@ serde = "1.0.162"
 serde_derive = "1.0.162"
 chrono = { version = "0.4.24", features = ["serde"] }
 rand = "0.8.5"
-rust-crypto = "0.2.36"
+aes = "0.8.2"
