--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -10,6 +10,7 @@ argon2 = "0.5.0"
 base64 = "0.21.0"
 chrono = "0.4.24"
 common_lib = { version = "0.1.0", path = "../common_lib" }
+dialoguer = "0.10.4"
 diesel = {version = "2.0.4",features= ["chrono","mysql","r2d2"]}
 dotenvy = "0.15.7"
 env_logger = "0.10.0"
