--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,5 +16,6 @@ dotenvy = "0.15.7"
 env_logger = "0.10.0"
 password-hash = "0.5.0"
 rand = "0.8.5"
+rsa = "0.9.2"
 serde = "1.0.162"
 serde_derive = "1.0.162"
