--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -16,3 +16,5 @@ directories = "5.0.1"
 cookie = "0.17.0"
 regex = "1.8.1"
 iced_aw = { version = "0.5.2", features = ["modal", "card"] }
+rsa = "0.9.2"
+rand = "0.8.5"
