--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.1"
 edition = "2021"
 
 [dependencies]
+actix-multipart = "0.6.0"
 actix-session = { version = "0.7.2", features = ["cookie-session"] }
 actix-web = {version = "4.3.1"}
 argon2 = "0.5.0"
@@ -14,6 +15,7 @@ dialoguer = "0.10.4"
 diesel = {version = "2.0.4",features= ["chrono","mysql","r2d2"]}
 dotenvy = "0.15.7"
 env_logger = "0.10.0"
+futures = "0.3.28"
 password-hash = "0.5.0"
 rand = "0.8.5"
 rsa = "0.9.2"
