--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -16,6 +16,7 @@ diesel = {version = "2.0.4",features= ["chrono","mysql","r2d2"]}
 dotenvy = "0.15.7"
 env_logger = "0.10.0"
 futures = "0.3.28"
+once_cell = "1.17.1"
 password-hash = "0.5.0"
 rand = "0.8.5"
 rsa = "0.9.2"
