--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.1"
 edition = "2021"
 
 [dependencies]
+actix = "0.13.0"
 actix-multipart = "0.6.0"
 actix-session = { version = "0.7.2", features = ["cookie-session"] }
 actix-web = {version = "4.3.1"}
 argon2 = "0.5.0"
+async-stream = "0.3.5"
 base64 = "0.21.0"
 chrono = "0.4.24"
 common_lib = { version = "0.1.0", path = "../common_lib" }
@@ -24,3 +26,4 @@ serde = "1.0.162"
 serde_derive = "1.0.162"
 serde_json = "1.0.96"
 tempfile = "3.5.0"
+tokio = { version = "1.28.1", features = ["fs"] }
