--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4.24", features = ["serde"] }
 iced = { version = "0.9.0", features = ["tokio", "default_system_font"] }
-reqwest = { version = "0.11.17", features = ["blocking", "json", "cookies"] }
+reqwest = { version = "0.11.17", features = ["blocking", "json", "cookies", "cookie_store", "multipart"] }
 common_lib = { version = "0.1.0", path = "../common_lib" }
 once_cell = "1.17.1"
 serde_json = "1.0.96"
